--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/mzamora1/Linked-List/"
   },
-  "homepage": "https://github.com/mzamora1/Linked-List/index.html",
+  "homepage": "https://mzamora1.github.io/Linked-List",
   "devDependencies": {
     "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.3",
@@ -32,6 +32,7 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
